added testing home page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Carnatic-Ragas</h1>
     <div id="content">
         <!-- Markdown content or converted HTML content goes here -->
-        <p>This is where your README.md content will go.</p>
+        <p>Testing of HTML page</p>
     </div>
 </body>
 </html>
