--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
 <body>
     <header>
         <h1>My Project</h1>
-        
     </header>
 
     <main>
         <div class="container">
-
-            <div id="markdown-content">
-
-            </div>
+            <!-- Injected Markdown Content -->
         </div>
     </main>
 
