deploy: f4e33ceaf746e3e356dba4f10a902d03fd43cbc1

--- a/index.html
+++ b/index.html
@@ -1234,7 +1234,7 @@
 </tr>
 <tr class="odd">
 <td>39</td>
-<td>Jhālavarāli</td>
+<td><a href="ragas/Jhālavarāli.md">Jhālavarāli</a></td>
 <td>Rushi</td>
 <td>Aarohanam</td>
 <td>S</td>
