--- a/content.html
+++ b/content.html
@@ -1218,7 +1218,7 @@
 </tr>
 <tr class="odd">
 <td>39</td>
-<td>Jhālavarāli</td>
+<td><a href="ragas/Jhālavarāli.md">Jhālavarāli</a></td>
 <td>Rushi</td>
 <td>Aarohanam</td>
 <td>S</td>
