deploy: a32474a746bd977633b2747cdc0a510df861ce30

--- a/links.html
+++ b/links.html
@@ -25,6 +25,7 @@
 <a href="ragas/html/Navaneetham.html">Navaneetham.html</a><br>
 <a href="ragas/html/Nāganandhini.html">Nāganandhini.html</a><br>
 <a href="ragas/html/Nātakapriya.html">Nātakapriya.html</a><br>
+<a href="ragas/html/Pāvani.html">Pāvani.html</a><br>
 <a href="ragas/html/Rathnāngi.html">Rathnāngi.html</a><br>
 <a href="ragas/html/Rupavati.html">Rupavati.html</a><br>
 <a href="ragas/html/Rāgavardhani.html">Rāgavardhani.html</a><br>
