--- a/links.html
+++ b/links.html
@@ -26,6 +26,7 @@
 <a href="ragas/html/Nāganandhini.html">Nāganandhini.html</a><br>
 <a href="ragas/html/Nātakapriya.html">Nātakapriya.html</a><br>
 <a href="ragas/html/Pāvani.html">Pāvani.html</a><br>
+<a href="ragas/html/Raghupriyaa.html">Raghupriyaa.html</a><br>
 <a href="ragas/html/Rathnāngi.html">Rathnāngi.html</a><br>
 <a href="ragas/html/Rupavati.html">Rupavati.html</a><br>
 <a href="ragas/html/Rāgavardhani.html">Rāgavardhani.html</a><br>
