--- a/links.html
+++ b/links.html
@@ -43,3 +43,4 @@
 <a href="ragas/html/Varunapriyaa.html">Varunapriyaa.html</a><br>
 <a href="ragas/html/Vāgadeeshwari.html">Vāgadeeshwari.html</a><br>
 <a href="ragas/html/Yāgapriyā.html">Yāgapriyā.html</a><br>
+<a href="ragas/html/Śubhapantuvarāḷi.html">Śubhapantuvarāḷi.html</a><br>
