--- a/links.html
+++ b/links.html
@@ -36,6 +36,7 @@
 <a href="ragas/html/Senāvati.html">Senāvati.html</a><br>
 <a href="ragas/html/Shulini.html">Shulini.html</a><br>
 <a href="ragas/html/Sooryakāntam.html">Sooryakāntam.html</a><br>
+<a href="ragas/html/Suvarnāngi.html">Suvarnāngi.html</a><br>
 <a href="ragas/html/Sālagam.html">Sālagam.html</a><br>
 <a href="ragas/html/Tānaroopi.html">Tānaroopi.html</a><br>
 <a href="ragas/html/Vakulābharanam.html">Vakulābharanam.html</a><br>
