deploy: 712e8e91ff1ba33a21da38acfafa8faaa0e47b7d

--- a/links.html
+++ b/links.html
@@ -29,6 +29,7 @@
 <a href="ragas/html/Nātakapriya.html">Nātakapriya.html</a><br>
 <a href="ragas/html/Pāvani.html">Pāvani.html</a><br>
 <a href="ragas/html/Raghupriyaa.html">Raghupriyaa.html</a><br>
+<a href="ragas/html/Rasikapriya.html">Rasikapriya.html</a><br>
 <a href="ragas/html/Rathnāngi.html">Rathnāngi.html</a><br>
 <a href="ragas/html/Rupavati.html">Rupavati.html</a><br>
 <a href="ragas/html/Rāgavardhani.html">Rāgavardhani.html</a><br>
