deploy: 356ee778d6ec2f4c4597e73dcc87c0387bcd6941

--- a/links.html
+++ b/links.html
@@ -5,6 +5,7 @@
 <a href="ragas/html/Chārukeshi.html">Chārukeshi.html</a><br>
 <a href="ragas/html/Dheera_Shankarābharanam.html">Dheera_Shankarābharanam.html</a><br>
 <a href="ragas/html/Dhenuka.html">Dhenuka.html</a><br>
+<a href="ragas/html/Divyamaṇi.html">Divyamaṇi.html</a><br>
 <a href="ragas/html/Gangeyabhushani.html">Gangeyabhushani.html</a><br>
 <a href="ragas/html/Ghavāmbhodi.html">Ghavāmbhodi.html</a><br>
 <a href="ragas/html/Gowri_Manohari.html">Gowri_Manohari.html</a><br>
