deploy: 19aaf066fb0e2d8f9b3f363eecb4b87b0e8e1a51

--- a/links.html
+++ b/links.html
@@ -18,6 +18,7 @@
 <a href="ragas/html/Jalārnavam.html">Jalārnavam.html</a><br>
 <a href="ragas/html/Jhankāradhvani.html">Jhankāradhvani.html</a><br>
 <a href="ragas/html/Jhālavarāli.html">Jhālavarāli.html</a><br>
+<a href="ragas/html/Jyothisvarūpiṇi.html">Jyothisvarūpiṇi.html</a><br>
 <a href="ragas/html/Kanakāngi.html">Kanakāngi.html</a><br>
 <a href="ragas/html/Keeravāni.html">Keeravāni.html</a><br>
 <a href="ragas/html/Kharaharapriya.html">Kharaharapriya.html</a><br>
