deploy: 47393397e52799e871d1ae13fde1ab819fd93209

--- a/links.html
+++ b/links.html
@@ -42,6 +42,7 @@
 <a href="ragas/html/Senāvati.html">Senāvati.html</a><br>
 <a href="ragas/html/Shulini.html">Shulini.html</a><br>
 <a href="ragas/html/Sooryakāntam.html">Sooryakāntam.html</a><br>
+<a href="ragas/html/Sucharitrā.html">Sucharitrā.html</a><br>
 <a href="ragas/html/Suvarnāngi.html">Suvarnāngi.html</a><br>
 <a href="ragas/html/Sālagam.html">Sālagam.html</a><br>
 <a href="ragas/html/Tānaroopi.html">Tānaroopi.html</a><br>
