deploy: ca98f97a203355945a90cd74c6cf5373309e7aed

--- a/ragas/html/Vāchaspati.html
+++ b/ragas/html/Vāchaspati.html
@@ -15,6 +15,9 @@
   </style>
 </head>
 <body>
+<figure>
+<img src="https://upload.wikimedia.org/wikipedia/commons/f/f1/Vachaspati_scale.svg" alt="" /><figcaption>Vachaspati Scale</figcaption>
+</figure>
 <table>
 <thead>
 <tr class="header">
