--- a/links.html
+++ b/links.html
@@ -25,6 +25,7 @@
 <a href="ragas/html/Kharaharapriya.html">Kharaharapriya.html</a><br>
 <a href="ragas/html/Kokilapriyaa.html">Kokilapriyaa.html</a><br>
 <a href="ragas/html/Kōsalam.html">Kōsalam.html</a><br>
+<a href="ragas/html/Latāngi.html">Latāngi.html</a><br>
 <a href="ragas/html/Mechakalyāni.html">Mechakalyāni.html</a><br>
 <a href="ragas/html/Mānavati.html">Mānavati.html</a><br>
 <a href="ragas/html/Māraranjani.html">Māraranjani.html</a><br>
