--- a/links.html
+++ b/links.html
@@ -1,4 +1,5 @@
 <!-- Links to Markdown Content -->
+<a href="ragas/html/62_Riśabhapriyā.html">62_Riśabhapriyā.html</a><br>
 <a href="ragas/html/Bhavapriyā.html">Bhavapriyā.html</a><br>
 <a href="ragas/html/Chakravākam.html">Chakravākam.html</a><br>
 <a href="ragas/html/Chalanāttai.html">Chalanāttai.html</a><br>
