deploy: 865e90e70dcd465aabfabd2e99f408fae8ac8f85

--- a/ragas/html/71_Kōsalam.html
+++ b/ragas/html/71_Kōsalam.html
@@ -15,6 +15,9 @@
   </style>
 </head>
 <body>
+<figure>
+<img src="https://en.wikipedia.org/wiki/Kosalam#/media/File:Kosalam_scale.svg" alt="" /><figcaption>Kosalam</figcaption>
+</figure>
 <table>
 <thead>
 <tr class="header">
