deploy: 751112de573042f2464d3e4f050e9d5cbb877fe1

--- a/ragas/html/1_Kanakāngi.html
+++ b/ragas/html/1_Kanakāngi.html
@@ -18,88 +18,69 @@
 <table>
 <thead>
 <tr class="header">
-<th>*</th>
-<th>Raga</th>
-<th>ārohanam</th>
-<th>avarohanam</th>
+<th><strong>1 <a href="https://en.wikipedia.org/wiki/Kanakangi" title="Kanakangi">Kanakāngi (Janaka raga)</a></strong></th>
+<th>S R₁ G₁ M₁ P D₁ N₁ Ṡ</th>
+<th>Ṡ N₁ D₁ P M₁ G₁ R₁ S</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td>1</td>
-<td><a href="https://en.wikipedia.org/wiki/Kanakangi" title="Kanakangi">Kanakāngi (Janaka raga)</a></td>
-<td>S R₁ G₁ M₁ P D₁ N₁ Ṡ</td>
-<td>Ṡ N₁ D₁ P M₁ G₁ R₁ S</td>
-</tr>
-<tr class="even">
-<td>1</td>
-<td><a href="https://en.wikipedia.org/wiki/Kanakambari" title="Kanakambari">Kanakāmbari</a></td>
+<td><strong><a href="https://en.wikipedia.org/wiki/Kanakambari" title="Kanakambari">Kanakāmbari</a></strong></td>
 <td>S R₁ M₁ P D₁ Ṡ</td>
 <td>Ṡ N₁ D₁ P M₁ G₁ R₁ S</td>
 </tr>
-<tr class="odd">
-<td>2</td>
-<td>Kanakatodi</td>
+<tr class="even">
+<td><em>Kanakatodi</em></td>
 <td>S R₁ G₁ M₁ P D₁ Ṡ</td>
 <td>Ṡ N₁ D₁ P M₁ R₁ S</td>
 </tr>
-<tr class="even">
-<td>3</td>
-<td>Mādhavapriyā</td>
+<tr class="odd">
+<td><em>Mādhavapriyā</em></td>
 <td>S R₁ G₁ P D₁ N₁ Ṡ</td>
 <td>Ṡ N₁ D₁ P G₁ R₁ S</td>
 </tr>
-<tr class="odd">
-<td>4</td>
-<td><a href="https://en.wikipedia.org/wiki/Karnataka_Shuddha_Saveri" title="Karnataka Shuddha Saveri">Karnātaka Shuddha Sāveri</a></td>
+<tr class="even">
+<td><em><a href="https://en.wikipedia.org/wiki/Karnataka_Shuddha_Saveri" title="Karnataka Shuddha Saveri">Karnātaka Shuddha Sāveri</a></em></td>
 <td>S R₁ M₁ P D₁ Ṡ</td>
 <td>Ṡ D₁ P M₁ R₁ S</td>
 </tr>
-<tr class="even">
-<td>5</td>
-<td>Latantapriya</td>
+<tr class="odd">
+<td><em>Latantapriya</em></td>
 <td>S R₁ G₁ M₁ P D₁ Ṡ</td>
 <td>Ṡ D₁ P M₁ R₁ S</td>
 </tr>
-<tr class="odd">
-<td>6</td>
-<td>Lavangi (Raga created by M. Balamuralikrishna)</td>
+<tr class="even">
+<td><em><a href="https://en.wikipedia.org/wiki/Lavangi" title="Lavangi">Lavangi</a> (Raga created by <a href="https://en.wikipedia.org/wiki/M._Balamuralikrishna" title="M. Balamuralikrishna">M. Balamuralikrishna</a>)</em></td>
 <td>S R₁ M₁ D₁ Ṡ</td>
 <td>Ṡ D₁ M₁ R₁ S</td>
 </tr>
-<tr class="even">
-<td>7</td>
-<td>Megha</td>
+<tr class="odd">
+<td><em>Megha</em></td>
 <td>S R₁ M₁ P D₁ N₁ D₁ P Ṡ</td>
 <td>Ṡ N₁ D₁ P M₁ R₁ S</td>
 </tr>
-<tr class="odd">
-<td>8</td>
-<td>Rishabhavilāsa</td>
+<tr class="even">
+<td><em>Rishabhavilāsa</em></td>
 <td>S R₁ M₁ P D₁ Ṡ</td>
 <td>Ṡ D₁ P M₁ R₁ M₁ R₁ S</td>
 </tr>
-<tr class="even">
-<td>9</td>
-<td>Sarvashree</td>
+<tr class="odd">
+<td><em>Sarvashree</em></td>
 <td>S M₁ P Ṡ</td>
 <td>Ṡ P M₁ S</td>
 </tr>
-<tr class="odd">
-<td>10</td>
-<td>Suddha Mukhāri</td>
+<tr class="even">
+<td><em>Suddha Mukhāri</em></td>
 <td>S R₁ M₁ P D₁ Ṡ</td>
 <td>Ṡ N₁ D₁ P M₁ G₁ R₁ S</td>
 </tr>
-<tr class="even">
-<td>11</td>
-<td>Tatillatika</td>
+<tr class="odd">
+<td><em>Tatillatika</em></td>
 <td>S R₁ M₁ P D₁ Ṡ</td>
 <td>Ṡ D₁ P M₁ R₁ S</td>
 </tr>
-<tr class="odd">
-<td>12</td>
-<td>Vāgeeshwari</td>
+<tr class="even">
+<td><em>Vāgeeshwari</em></td>
 <td>S R₁ G₁ M₁ P D₁ Ṡ</td>
 <td>Ṡ D₁ M₁ P G₁ R₁ S</td>
 </tr>
