deploy: 3269326193b2488816ae1fde683b7dc72f0e5bad

--- a/links.html
+++ b/links.html
@@ -43,6 +43,7 @@
 <a href="ragas/html/48_Divyamaṇi.html">48_Divyamaṇi.html</a><br>
 <a href="ragas/html/49_Dhavaḻāmbari.html">49_Dhavaḻāmbari.html</a><br>
 <a href="ragas/html/4_Vanaspati.html">4_Vanaspati.html</a><br>
+<a href="ragas/html/50_Nāmanārāyaṇi.html">50_Nāmanārāyaṇi.html</a><br>
 <a href="ragas/html/5_Mānavati.html">5_Mānavati.html</a><br>
 <a href="ragas/html/62_Riśabhapriyā.html">62_Riśabhapriyā.html</a><br>
 <a href="ragas/html/63_Latāngi.html">63_Latāngi.html</a><br>
