--- a/links.html
+++ b/links.html
@@ -46,6 +46,7 @@
 <a href="ragas/html/50_Nāmanārāyaṇi.html">50_Nāmanārāyaṇi.html</a><br>
 <a href="ragas/html/51_Panthuvarāli.html">51_Panthuvarāli.html</a><br>
 <a href="ragas/html/52_Rāmapriyā.html">52_Rāmapriyā.html</a><br>
+<a href="ragas/html/56_Śanmukhapriyā.html">56_Śanmukhapriyā.html</a><br>
 <a href="ragas/html/5_Mānavati.html">5_Mānavati.html</a><br>
 <a href="ragas/html/62_Riśabhapriyā.html">62_Riśabhapriyā.html</a><br>
 <a href="ragas/html/63_Latāngi.html">63_Latāngi.html</a><br>
