deploy: ec4319cc21e98c0775220e5ed1bdb55e7ed33003

--- a/ragas/html/56_Śanmukhapriyā.html
+++ b/ragas/html/56_Śanmukhapriyā.html
@@ -15,6 +15,76 @@
   </style>
 </head>
 <body>
-<p>test</p>
+<table>
+<thead>
+<tr class="header">
+<th><strong>56 <a href="https://en.wikipedia.org/wiki/Shanmukhapriya" title="Shanmukhapriya">Śanmukhapriyā</a></strong></th>
+<th>S R₂ G₂ M₂ P D₁ N₂ Ṡ</th>
+<th>Ṡ N₂ D₁ P M₂ G₂ R₂ S</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><strong>Chāmaram</strong></td>
+<td>S R₂ M₂ P D₁ N₂ Ṡ</td>
+<td>Ṡ N₂ D₁ P M₂ G₂ R₂ S</td>
+</tr>
+<tr class="even">
+<td><em>Bhāshini</em></td>
+<td>S G₂ R₂ G₂ M₂ P D₁ N₂ Ṡ</td>
+<td>Ṡ N₂ D₁ P M₂ G₂ R₁ S</td>
+</tr>
+<tr class="odd">
+<td><em>Chintāmani</em></td>
+<td>S G₂ R₂ G₂ M₂ G₂ R₂ G₂ P M₂ P D₂ N₂ Ṡ</td>
+<td>Ṡ N₂ D₂ P M₂ G₂ R₂ S</td>
+</tr>
+<tr class="even">
+<td><em>Dhanakari</em></td>
+<td>S G₂ P D₁ N₂ Ṡ</td>
+<td>Ṡ N₂ D₁ M₂ G₂ S</td>
+</tr>
+<tr class="odd">
+<td><em>Garigadya</em></td>
+<td>N₂ S G₂ M₂ P D₁ N₂</td>
+<td>D₁ P M₂ G₂ R₂ S</td>
+</tr>
+<tr class="even">
+<td><em>Gopikathilakam</em></td>
+<td>S R₂ G₂ M₂ P N₂ Ṡ</td>
+<td>Ṡ N₂ P M₂ G₂ R₂ S</td>
+</tr>
+<tr class="odd">
+<td><em>Kokilanandhi</em></td>
+<td>S G₂ M₂ D₁ N₂ Ṡ</td>
+<td>Ṡ N₂ D₁ P M₂ G₂ S</td>
+</tr>
+<tr class="even">
+<td><em>Rājeshwari</em></td>
+<td>S R₂ G₂ P N₂ Ṡ</td>
+<td>Ṡ N₂ D₁ P M₁ G₂ S</td>
+</tr>
+<tr class="odd">
+<td><em>Samudrapriyā</em></td>
+<td>S G₂ M₂ P N₂ Ṡ</td>
+<td>Ṡ N₂ P M₂ G₂ S</td>
+</tr>
+<tr class="even">
+<td><em>Shanmukhi (Trimoorti)</em></td>
+<td>S R₁ G₂ M₂ D₁ N₂ Ṡ</td>
+<td>Ṡ N₂ D₁ M₂ G₂ R₁ S</td>
+</tr>
+<tr class="odd">
+<td><em>Sumanasaranjani</em></td>
+<td>S G₂ M₂ P N₂ Ṡ</td>
+<td>Ṡ N₂ P M₂ G₂ S</td>
+</tr>
+<tr class="even">
+<td><em>Vasukari</em></td>
+<td>S G₂ M₂ P D₁ N₂ Ṡ</td>
+<td>Ṡ N₂ D₁ M₂ G₂ S</td>
+</tr>
+</tbody>
+</table>
 </body>
 </html>
