--- a/links.html
+++ b/links.html
@@ -49,6 +49,7 @@
 <a href="ragas/html/56_Śanmukhapriyā.html">56_Śanmukhapriyā.html</a><br>
 <a href="ragas/html/57_Simhendramadhyamam.html">57_Simhendramadhyamam.html</a><br>
 <a href="ragas/html/58_Hemavati.html">58_Hemavati.html</a><br>
+<a href="ragas/html/59_Dharmavati.html">59_Dharmavati.html</a><br>
 <a href="ragas/html/5_Mānavati.html">5_Mānavati.html</a><br>
 <a href="ragas/html/62_Riśabhapriyā.html">62_Riśabhapriyā.html</a><br>
 <a href="ragas/html/63_Latāngi.html">63_Latāngi.html</a><br>
