deploy: 071104e8d0f0304a39a0587be02c4e7aa7ea5444

--- a/links.html
+++ b/links.html
@@ -52,6 +52,7 @@
 <a href="ragas/html/59_Dharmavati.html">59_Dharmavati.html</a><br>
 <a href="ragas/html/5_Mānavati.html">5_Mānavati.html</a><br>
 <a href="ragas/html/60_Nītimati.html">60_Nītimati.html</a><br>
+<a href="ragas/html/61_Kāntāmani.html">61_Kāntāmani.html</a><br>
 <a href="ragas/html/62_Riśabhapriyā.html">62_Riśabhapriyā.html</a><br>
 <a href="ragas/html/63_Latāngi.html">63_Latāngi.html</a><br>
 <a href="ragas/html/64_Vāchaspathi.html">64_Vāchaspathi.html</a><br>
