--- a/ragas/html/53_Gamanāśrama.html
+++ b/ragas/html/53_Gamanāśrama.html
@@ -16,28 +16,73 @@
 </head>
 <body>
 <table>
+<colgroup>
+<col style="width: 53%" />
+<col style="width: 16%" />
+<col style="width: 30%" />
+</colgroup>
 <thead>
 <tr class="header">
-<th><strong>61 <a href="https://en.wikipedia.org/wiki/Kantamani" title="Kantamani">Kāntāmani</a></strong></th>
-<th>S R₂ G₃ M₂ P D₁ N₁ Ṡ</th>
-<th>Ṡ N₁ D₁ P M₂ G₃ R₂ S</th>
+<th><strong>53 <a href="https://en.wikipedia.org/wiki/Gamanashrama" title="Gamanashrama">Gamanāśrama</a></strong></th>
+<th>S R₁ G₃ M₂ P D₂ N₃ Ṡ</th>
+<th>Ṡ N₃ D₂ P M₂ G₃ R₁ S</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td><strong>Kunthalam</strong></td>
-<td>S R₂ G₃ M₂ P D₁ Ṡ</td>
-<td>Ṡ N₁ D₁ P M₂ G₃ R₂ S</td>
+<td><strong>Gamakakriyā</strong></td>
+<td>S R₁ G₃ M₂ P D₂ Ṡ</td>
+<td>Ṡ N₃ D₂ P M₂ G₃ R₁ S</td>
 </tr>
 <tr class="even">
-<td><em>Kanakakusumāvali</em></td>
-<td>S R₂ G₃ M₂ P D₂ Ṡ</td>
-<td>Ṡ D₂ P M₂ G₃ R₂ S</td>
+<td><em>Alankāri</em></td>
+<td>S G₃ M₂ D₂ N₃ D₂ Ṡ</td>
+<td>Ṡ N₃ D₂ M₂ G₃ S</td>
 </tr>
 <tr class="odd">
-<td><em>Shruthiranjani</em></td>
-<td>S R₂ G₃ M₂ P D₁ N₁</td>
-<td>N₁ D₁ P M₂ G₃ R₂ S</td>
+<td><em><a href="https://en.wikipedia.org/wiki/Bhatiyar" title="Bhatiyar">Bhatiyār</a> {Hindustani}</em></td>
+<td>S D₂ P D₂ M₂ P G₃ M₂ D₂ S</td>
+<td>R₁ N₃ D₂ P M₂ P G₃ R₁ S (<em>Anya swara*</em> : M₁)</td>
+</tr>
+<tr class="even">
+<td><em>Dvigāndhārabhooshani</em></td>
+<td>S R₁ G₂ G₃ G₂ P D₂ Ṡ</td>
+<td>Ṡ D₂ P G₂ G₃ G₂ R₁ S D₂ S</td>
+</tr>
+<tr class="odd">
+<td><em><a href="https://en.wikipedia.org/wiki/Hamsanandi" title="Hamsanandi">Hamsānandi</a></em></td>
+<td>S R₁ G₃ M₂ D₂ N₃ Ṡ</td>
+<td>Ṡ N₃ D₂ M₂ G₃ R₁ S</td>
+</tr>
+<tr class="even">
+<td><em>Mechakāngi</em></td>
+<td>S R₁ G₃ M₂ P D₂ P N₃ Ṡ</td>
+<td>Ṡ N₃ P D₂ P M₂ G₃ R₁ S</td>
+</tr>
+<tr class="odd">
+<td><em>Padmakalyāni</em></td>
+<td>S G₃ P N₃ Ṡ</td>
+<td>Ṡ N₃ D₂ P M₂ G₃ S</td>
+</tr>
+<tr class="even">
+<td><em>Poorvi Kalyāni</em></td>
+<td>S R₁ G₃ M₂ P D₂ P Ṡ</td>
+<td>Ṡ N₃ D₂ P M₂ G₃ R₁ S</td>
+</tr>
+<tr class="odd">
+<td><em>Sharabadhvāja</em></td>
+<td>S R₁ G₃ M₂ P D₂ Ṡ</td>
+<td>Ṡ D₂ P G₃ R₁ S</td>
+</tr>
+<tr class="even">
+<td><em><a href="https://en.wikipedia.org/wiki/Sohini" title="Sohini">Sohini</a> {Hindustani}</em></td>
+<td>S G₃ M₂ D₂ N₃ Ṡ</td>
+<td>Ṡ N₃ D₂ M₂ G₃ R₁ S</td>
+</tr>
+<tr class="odd">
+<td><em>Vaishaka</em></td>
+<td>S R₁ G₃ M₂ P D₂ N₃ Ṡ</td>
+<td>Ṡ N₃ D₂ N₃ P M₂ G₃ M₂ R₁ S</td>
 </tr>
 </tbody>
 </table>
