--- a/ragas/html/1_Kanakāngi.html
+++ b/ragas/html/1_Kanakāngi.html
@@ -15,6 +15,76 @@
   </style>
 </head>
 <body>
-<p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Kanakangi_scale.svg/300px-Kanakangi_scale.svg.png" alt="Kanakangi Scale" /> | <strong>1 <a href="https://en.wikipedia.org/wiki/Kanakangi" title="Kanakangi">Kanakāngi (Janaka raga)</a></strong> | S R₁ G₁ M₁ P D₁ N₁ Ṡ | Ṡ N₁ D₁ P M₁ G₁ R₁ S | | ——————————————————————————————————————————————————————————– | ———————- | ——————– | | <strong><a href="https://en.wikipedia.org/wiki/Kanakambari" title="Kanakambari">Kanakāmbari</a></strong> | S R₁ M₁ P D₁ Ṡ | Ṡ N₁ D₁ P M₁ G₁ R₁ S | | <em>Kanakatodi</em> | S R₁ G₁ M₁ P D₁ Ṡ | Ṡ N₁ D₁ P M₁ R₁ S | | <em>Mādhavapriyā</em> | S R₁ G₁ P D₁ N₁ Ṡ | Ṡ N₁ D₁ P G₁ R₁ S | | <em><a href="https://en.wikipedia.org/wiki/Karnataka_Shuddha_Saveri" title="Karnataka Shuddha Saveri">Karnātaka Shuddha Sāveri</a></em> | S R₁ M₁ P D₁ Ṡ | Ṡ D₁ P M₁ R₁ S | | <em>Latantapriya</em> | S R₁ G₁ M₁ P D₁ Ṡ | Ṡ D₁ P M₁ R₁ S | | <em><a href="https://en.wikipedia.org/wiki/Lavangi" title="Lavangi">Lavangi</a> (Raga created by <a href="https://en.wikipedia.org/wiki/M._Balamuralikrishna" title="M. Balamuralikrishna">M. Balamuralikrishna</a>)</em> | S R₁ M₁ D₁ Ṡ | Ṡ D₁ M₁ R₁ S | | <em>Megha</em> | S R₁ M₁ P D₁ N₁ D₁ P Ṡ | Ṡ N₁ D₁ P M₁ R₁ S | | <em>Rishabhavilāsa</em> | S R₁ M₁ P D₁ Ṡ | Ṡ D₁ P M₁ R₁ M₁ R₁ S | | <em>Sarvashree</em> | S M₁ P Ṡ | Ṡ P M₁ S | | <em>Suddha Mukhāri</em> | S R₁ M₁ P D₁ Ṡ | Ṡ N₁ D₁ P M₁ G₁ R₁ S | | <em>Tatillatika</em> | S R₁ M₁ P D₁ Ṡ | Ṡ D₁ P M₁ R₁ S | | <em>Vāgeeshwari</em> | S R₁ G₁ M₁ P D₁ Ṡ | Ṡ D₁ M₁ P G₁ R₁ S |</p>
+<table>
+<thead>
+<tr class="header">
+<th><strong>1 <a href="https://en.wikipedia.org/wiki/Kanakangi" title="Kanakangi">Kanakāngi (Janaka raga)</a></strong></th>
+<th>S R₁ G₁ M₁ P D₁ N₁ Ṡ</th>
+<th>Ṡ N₁ D₁ P M₁ G₁ R₁ S</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><strong><a href="https://en.wikipedia.org/wiki/Kanakambari" title="Kanakambari">Kanakāmbari</a></strong></td>
+<td>S R₁ M₁ P D₁ Ṡ</td>
+<td>Ṡ N₁ D₁ P M₁ G₁ R₁ S</td>
+</tr>
+<tr class="even">
+<td><em>Kanakatodi</em></td>
+<td>S R₁ G₁ M₁ P D₁ Ṡ</td>
+<td>Ṡ N₁ D₁ P M₁ R₁ S</td>
+</tr>
+<tr class="odd">
+<td><em>Mādhavapriyā</em></td>
+<td>S R₁ G₁ P D₁ N₁ Ṡ</td>
+<td>Ṡ N₁ D₁ P G₁ R₁ S</td>
+</tr>
+<tr class="even">
+<td><em><a href="https://en.wikipedia.org/wiki/Karnataka_Shuddha_Saveri" title="Karnataka Shuddha Saveri">Karnātaka Shuddha Sāveri</a></em></td>
+<td>S R₁ M₁ P D₁ Ṡ</td>
+<td>Ṡ D₁ P M₁ R₁ S</td>
+</tr>
+<tr class="odd">
+<td><em>Latantapriya</em></td>
+<td>S R₁ G₁ M₁ P D₁ Ṡ</td>
+<td>Ṡ D₁ P M₁ R₁ S</td>
+</tr>
+<tr class="even">
+<td><em><a href="https://en.wikipedia.org/wiki/Lavangi" title="Lavangi">Lavangi</a> (Raga created by <a href="https://en.wikipedia.org/wiki/M._Balamuralikrishna" title="M. Balamuralikrishna">M. Balamuralikrishna</a>)</em></td>
+<td>S R₁ M₁ D₁ Ṡ</td>
+<td>Ṡ D₁ M₁ R₁ S</td>
+</tr>
+<tr class="odd">
+<td><em>Megha</em></td>
+<td>S R₁ M₁ P D₁ N₁ D₁ P Ṡ</td>
+<td>Ṡ N₁ D₁ P M₁ R₁ S</td>
+</tr>
+<tr class="even">
+<td><em>Rishabhavilāsa</em></td>
+<td>S R₁ M₁ P D₁ Ṡ</td>
+<td>Ṡ D₁ P M₁ R₁ M₁ R₁ S</td>
+</tr>
+<tr class="odd">
+<td><em>Sarvashree</em></td>
+<td>S M₁ P Ṡ</td>
+<td>Ṡ P M₁ S</td>
+</tr>
+<tr class="even">
+<td><em>Suddha Mukhāri</em></td>
+<td>S R₁ M₁ P D₁ Ṡ</td>
+<td>Ṡ N₁ D₁ P M₁ G₁ R₁ S</td>
+</tr>
+<tr class="odd">
+<td><em>Tatillatika</em></td>
+<td>S R₁ M₁ P D₁ Ṡ</td>
+<td>Ṡ D₁ P M₁ R₁ S</td>
+</tr>
+<tr class="even">
+<td><em>Vāgeeshwari</em></td>
+<td>S R₁ G₁ M₁ P D₁ Ṡ</td>
+<td>Ṡ D₁ M₁ P G₁ R₁ S</td>
+</tr>
+</tbody>
+</table>
 </body>
 </html>
