deploy: 984b7221ecc73dcc078a9e233e6100c8c8bd899e

--- a/ragas/html/28_Harikāmbhōji.html
+++ b/ragas/html/28_Harikāmbhōji.html
@@ -6,12 +6,162 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <title>28_Harikāmbhōji</title>
   <style>
+    html {
+      color: #1a1a1a;
+      background-color: #fdfdfd;
+    }
+    body {
+      margin: 0 auto;
+      max-width: 36em;
+      padding-left: 50px;
+      padding-right: 50px;
+      padding-top: 50px;
+      padding-bottom: 50px;
+      hyphens: auto;
+      overflow-wrap: break-word;
+      text-rendering: optimizeLegibility;
+      font-kerning: normal;
+    }
+    @media (max-width: 600px) {
+      body {
+        font-size: 0.9em;
+        padding: 12px;
+      }
+      h1 {
+        font-size: 1.8em;
+      }
+    }
+    @media print {
+      html {
+        background-color: white;
+      }
+      body {
+        background-color: transparent;
+        color: black;
+        font-size: 12pt;
+      }
+      p, h2, h3 {
+        orphans: 3;
+        widows: 3;
+      }
+      h2, h3, h4 {
+        page-break-after: avoid;
+      }
+    }
+    p {
+      margin: 1em 0;
+    }
+    a {
+      color: #1a1a1a;
+    }
+    a:visited {
+      color: #1a1a1a;
+    }
+    img {
+      max-width: 100%;
+    }
+    h1, h2, h3, h4, h5, h6 {
+      margin-top: 1.4em;
+    }
+    h5, h6 {
+      font-size: 1em;
+      font-style: italic;
+    }
+    h6 {
+      font-weight: normal;
+    }
+    ol, ul {
+      padding-left: 1.7em;
+      margin-top: 1em;
+    }
+    li > ol, li > ul {
+      margin-top: 0;
+    }
+    blockquote {
+      margin: 1em 0 1em 1.7em;
+      padding-left: 1em;
+      border-left: 2px solid #e6e6e6;
+      color: #606060;
+    }
+    code {
+      font-family: Menlo, Monaco, Consolas, 'Lucida Console', monospace;
+      font-size: 85%;
+      margin: 0;
+      hyphens: manual;
+    }
+    pre {
+      margin: 1em 0;
+      overflow: auto;
+    }
+    pre code {
+      padding: 0;
+      overflow: visible;
+      overflow-wrap: normal;
+    }
+    .sourceCode {
+     background-color: transparent;
+     overflow: visible;
+    }
+    hr {
+      background-color: #1a1a1a;
+      border: none;
+      height: 1px;
+      margin: 1em 0;
+    }
+    table {
+      margin: 1em 0;
+      border-collapse: collapse;
+      width: 100%;
+      overflow-x: auto;
+      display: block;
+      font-variant-numeric: lining-nums tabular-nums;
+    }
+    table caption {
+      margin-bottom: 0.75em;
+    }
+    tbody {
+      margin-top: 0.5em;
+      border-top: 1px solid #1a1a1a;
+      border-bottom: 1px solid #1a1a1a;
+    }
+    th {
+      border-top: 1px solid #1a1a1a;
+      padding: 0.25em 0.5em 0.25em 0.5em;
+    }
+    td {
+      padding: 0.125em 0.5em 0.25em 0.5em;
+    }
+    header {
+      margin-bottom: 4em;
+      text-align: center;
+    }
+    #TOC li {
+      list-style: none;
+    }
+    #TOC ul {
+      padding-left: 1.3em;
+    }
+    #TOC > ul {
+      padding-left: 0;
+    }
+    #TOC a:not(:hover) {
+      text-decoration: none;
+    }
     code{white-space: pre-wrap;}
     span.smallcaps{font-variant: small-caps;}
-    span.underline{text-decoration: underline;}
-    div.column{display: inline-block; vertical-align: top; width: 50%;}
+    div.columns{display: flex; gap: min(4vw, 1.5em);}
+    div.column{flex: auto; overflow-x: auto;}
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
-    ul.task-list{list-style: none;}
+    /* The extra [class] is a hack that increases specificity enough to
+       override a similar rule in reveal.js */
+    ul.task-list[class]{list-style: none;}
+    ul.task-list li input[type="checkbox"] {
+      font-size: inherit;
+      width: 0.8em;
+      margin: 0 0.8em 0.2em -1.6em;
+      vertical-align: middle;
+    }
+    .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
 </head>
 <body>
@@ -23,7 +173,8 @@
 </colgroup>
 <thead>
 <tr class="header">
-<th><strong>28 <a href="https://en.wikipedia.org/wiki/Harikambhoji" title="Harikambhoji">Harikāmbhōji</a></strong></th>
+<th><strong>28 <a href="https://en.wikipedia.org/wiki/Harikambhoji"
+title="Harikambhoji">Harikāmbhōji</a></strong></th>
 <th>S R₂ G₃ M₁ P D₂ N₂ Ṡ</th>
 <th>Ṡ N₂ D₂ P M₁ G₃ R₂ S</th>
 </tr>
@@ -55,7 +206,8 @@
 <td>Ṡ N₂ D₂ P M₁ R₂ M₁ G₃ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Bahudari" title="Bahudari">Bahudāri</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Bahudari"
+title="Bahudari">Bahudāri</a></em></td>
 <td>S G₃ M₁ P D₂ N₂ Ṡ</td>
 <td>Ṡ N₂ P M₁ G₃ S</td>
 </tr>
@@ -85,7 +237,8 @@
 <td>Ṡ N₂ D₂ M₁ G₃ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Desh_(raga)" title="Desh (raga)">Desh</a> {Hindustani}</em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Desh_(raga)"
+title="Desh (raga)">Desh</a> {Hindustani}</em></td>
 <td>S R₂ M₁ P N₃ Ṡ</td>
 <td>Ṡ N₂ D₂ P M₁ G₃ R₂ S (<em>Anya swara*</em> : N₃)</td>
 </tr>
@@ -105,9 +258,11 @@
 <td>S N₂ D₂ M₁ P G₃ R₂ S<br>S N₂ D₂ M₁ G₃ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Jaijaivanti" title="Jaijaivanti">Dwijāvanthi /Jujāvanthi</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Jaijaivanti"
+title="Jaijaivanti">Dwijāvanthi /Jujāvanthi</a></em></td>
 <td>S R₂ M₁ G₃ M₁ P D₂ Ṡ</td>
-<td>Ṡ N₂ D₂ P M₁ G₃ M₁ R₂ G₂ R₂ S N₂ D₂ N₂ S (<em>Anya swara*</em> : G₂ N₃)</td>
+<td>Ṡ N₂ D₂ P M₁ G₃ M₁ R₂ G₂ R₂ S N₂ D₂ N₂ S (<em>Anya swara*</em> : G₂
+N₃)</td>
 </tr>
 <tr class="odd">
 <td><em>Eeshamanohari</em></td>
@@ -125,9 +280,11 @@
 <td>Ṡ N₂ D₂ P M₁ G₃ M₁ G₃ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Gara_(raga)" title="Gara (raga)">Gāra</a> {Hindustani}</em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Gara_(raga)"
+title="Gara (raga)">Gāra</a> {Hindustani}</em></td>
 <td>S G₃ M₁ P D₂ N₃ Ṡ</td>
-<td>Ṡ N₂ D₂ P M₁ G₃ R₂ G₂ R₂ S N₃ S N₂ D₂ S (<em>Anya swara*</em> : G₂ D₁ N₃)</td>
+<td>Ṡ N₂ D₂ P M₁ G₃ R₂ G₂ R₂ S N₃ S N₂ D₂ S (<em>Anya swara*</em> : G₂
+D₁ N₃)</td>
 </tr>
 <tr class="odd">
 <td><em>Gavati {Hindustani}</em></td>
@@ -175,9 +332,11 @@
 <td>Ṡ P M₁ G₃ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Jaijaiwanti" title="Jaijaiwanti">Jaijaiwanti</a> {Hindustani}</em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Jaijaiwanti"
+title="Jaijaiwanti">Jaijaiwanti</a> {Hindustani}</em></td>
 <td>S D₂ N₂ R₂ S R₂ G₃ M₁ P M₁ G₃ M₁ G₃ R₂ M₁ P N₃ Ṡ</td>
-<td>Ṡ N₂ D₂ P D₂ M₁ G₃ M₁ R₂ G₂ R₂ S N₃ S (<em>Anya swara*</em> : G₂ N₃)</td>
+<td>Ṡ N₂ D₂ P D₂ M₁ G₃ M₁ R₂ G₂ R₂ S N₃ S (<em>Anya swara*</em> : G₂
+N₃)</td>
 </tr>
 <tr class="odd">
 <td><em>Jaithshree</em></td>
@@ -195,7 +354,8 @@
 <td>Ṡ N₂ D₂ P M₁ G₃ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Jhinjhoti" title="Jhinjhoti">Jhinjoti</a> {Hindustani}</em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Jhinjhoti"
+title="Jhinjhoti">Jhinjoti</a> {Hindustani}</em></td>
 <td>D₂ S R₂ G₃ M₁ P D₂ N₂</td>
 <td>D₂ P M₁ G₃ R₂ S N₂ D₂ P D₂ S</td>
 </tr>
@@ -205,7 +365,8 @@
 <td>Ṡ N₂ D₂ P M₁ G₃ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Kambhoji" title="Kambhoji">Kāmbhoji</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Kambhoji"
+title="Kambhoji">Kāmbhoji</a></em></td>
 <td>S R₂ G₃ M₁ P D₂ Ṡ</td>
 <td>S N₂ D₂ P M₁ G₃ R₂ S N₃ P D₂ Ṡ (<em>Anya swara*</em> : N₃)</td>
 </tr>
@@ -215,12 +376,14 @@
 <td>Ṡ N₂ D₂ P M₁ G₃ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Khamaj" title="Khamaj">Khamāj</a> {Hindustani}</em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Khamaj"
+title="Khamaj">Khamāj</a> {Hindustani}</em></td>
 <td>S G₃ M₁ P D₂ N₃ Ṡ</td>
 <td>Ṡ N₂ D₂ P M₁ G₃ R₂ S (<em>Anya swara*</em> : N₃)</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Khamas_(raga)" title="Khamas (raga)">Kamās</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Khamas_(raga)"
+title="Khamas (raga)">Kamās</a></em></td>
 <td>S M₁ G₃ M₁ P D₂ N₂ Ṡ</td>
 <td>Ṡ N₂ D₂ P M₁ G₃ R₂ S (<em>Anya swara*</em> : N₃)</td>
 </tr>
@@ -240,7 +403,8 @@
 <td>Ṡ N₂ D₂ P M₁ G₃ S</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Kedaragaula" title="Kedaragaula">Kedāragowla</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Kedaragaula"
+title="Kedaragaula">Kedāragowla</a></em></td>
 <td>S R₂ M₁ P N₂ Ṡ</td>
 <td>Ṡ N₂ D₂ P M₁ G₃ R₂ S</td>
 </tr>
@@ -275,7 +439,8 @@
 <td>Ṡ N₂ D₂ G₃ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Mahati" title="Mahati">Mahathi</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Mahati"
+title="Mahati">Mahathi</a></em></td>
 <td>S G₃ P N₂ Ṡ</td>
 <td>Ṡ N₂ P G₃ S</td>
 </tr>
@@ -305,7 +470,8 @@
 <td>Ṡ N₂ D₂ M₁ G₃ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Mohanam" title="Mohanam">Mohanam</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Mohanam"
+title="Mohanam">Mohanam</a></em></td>
 <td>S R₂ G₃ P D₂ Ṡ</td>
 <td>Ṡ D₂ P G₃ R₂ S</td>
 </tr>
@@ -315,7 +481,8 @@
 <td>Ṡ N₂ D₂ M₁ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Nagasvaravali" title="Nagasvaravali">Nāgaswarāvali</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Nagasvaravali"
+title="Nagasvaravali">Nāgaswarāvali</a></em></td>
 <td>S G₃ M₁ P D₂ Ṡ</td>
 <td>Ṡ D₂ P M₁ G₃ S</td>
 </tr>
@@ -330,9 +497,12 @@
 <td>Ṡ N₂ D₂ P M₁ R₂ S</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Nattakurinji" title="Nattakurinji">Nāttai Kurinji</a></em></td>
-<td>S R₂ G₃ M₁ N₂ D₂ N₂ P D₂ N₂ S<br>S R₂ G₃ M₁ D₂ N₂ S<br>S R₂ G₃ M₁ N₂ D₂ N₂ P D₂ N₂ Ṡ</td>
-<td>Ṡ N₂ D₂ M₁ G₃ M₁ P G₃ R₂ S<br>S N₂ D₂ M₁ G₃ S<br>S N₂ D₂ M₁ G₃ M₁ P M₁ G₃ R₂ S</td>
+<td><em><a href="https://en.wikipedia.org/wiki/Nattakurinji"
+title="Nattakurinji">Nāttai Kurinji</a></em></td>
+<td>S R₂ G₃ M₁ N₂ D₂ N₂ P D₂ N₂ S<br>S R₂ G₃ M₁ D₂ N₂ S<br>S R₂ G₃ M₁ N₂
+D₂ N₂ P D₂ N₂ Ṡ</td>
+<td>Ṡ N₂ D₂ M₁ G₃ M₁ P G₃ R₂ S<br>S N₂ D₂ M₁ G₃ S<br>S N₂ D₂ M₁ G₃ M₁ P
+M₁ G₃ R₂ S</td>
 </tr>
 <tr class="even">
 <td><em>Nāttai Nārāyani</em></td>
@@ -355,7 +525,8 @@
 <td>Ṡ N₂ D₂ P M₁ G₃ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Navarasa_kannada" title="Navarasa kannada">Navarasa kannada</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Navarasa_kannada"
+title="Navarasa kannada">Navarasa kannada</a></em></td>
 <td>S G₃ M₁ P Ṡ</td>
 <td>Ṡ N₂ D₂ M₁ G₃ R₂ S</td>
 </tr>
@@ -410,9 +581,11 @@
 <td>Ṡ D₂ M₁ G₃ R₂ S</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Rageshree" title="Rageshree">Rāgeshree</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Rageshree"
+title="Rageshree">Rāgeshree</a></em></td>
 <td>S G₃ M₁ D₂ N₂ S<br>S G₃ M₁ D₂ N₂ S<br>S G₃ M₁ D₂ N₂ Ṡ</td>
-<td>Ṡ N₂ D₂ M₁ G₃ R₂ S<br>S N₂ D₂ M₁ G₃ R₂ S<br>S N₂ D₂ N₃ D₂ M₁ G₃ R₂ S (<em>Anya swara*{rarely}</em> : N₃)</td>
+<td>Ṡ N₂ D₂ M₁ G₃ R₂ S<br>S N₂ D₂ M₁ G₃ R₂ S<br>S N₂ D₂ N₃ D₂ M₁ G₃ R₂ S
+(<em>Anya swara*{rarely}</em> : N₃)</td>
 </tr>
 <tr class="even">
 <td><em>Ravi Chandrikā</em></td>
@@ -425,7 +598,8 @@
 <td>Ṡ N₂ P M₁ G₃ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Sahana_(raga)" title="Sahana (raga)">Sahāna</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Sahana_(raga)"
+title="Sahana (raga)">Sahāna</a></em></td>
 <td>S R₂ G₃ M₁ P M₁ D₂ N₂ Ṡ</td>
 <td>Ṡ N₂ S D₂ N₂ D₂ P M₁ G₃ M₁ R₂ G₃ R₂ S</td>
 </tr>
@@ -465,7 +639,8 @@
 <td>Ṡ N₂ P M₁ G₃ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Surutti" title="Surutti">Surutti</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Surutti"
+title="Surutti">Surutti</a></em></td>
 <td>S R₂ M₁ P N₂ D₂ N₂ Ṡ</td>
 <td>Ṡ N₂ D₂ P M₁ G₃ P M₁ R₂ S</td>
 </tr>
@@ -540,7 +715,8 @@
 <td>Ṡ D₂ P M₁ R₂ S</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Tilang" title="Tilang">Tilang</a> {Hindustani}</em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Tilang"
+title="Tilang">Tilang</a> {Hindustani}</em></td>
 <td>S G₃ M₁ P N₃ Ṡ</td>
 <td>Ṡ N₂ P M₁ G₃ S (<em>Anya swara*</em> : N₃)</td>
 </tr>
@@ -565,7 +741,8 @@
 <td>Ṡ N₂ D₂ P M₁ G₃ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Yadukulakamboji" title="Yadukulakamboji">Yadukula Kāmbhoji</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Yadukulakamboji"
+title="Yadukulakamboji">Yadukula Kāmbhoji</a></em></td>
 <td>S R₂ M₁ P D₂ Ṡ</td>
 <td>Ṡ N₂ D₂ P M₁ G₃ R₂ S</td>
 </tr>
