--- a/ragas/html/29_Dhīraśankarābharaṇam.html
+++ b/ragas/html/29_Dhīraśankarābharaṇam.html
@@ -6,12 +6,162 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <title>29_Dhīraśankarābharaṇam</title>
   <style>
+    html {
+      color: #1a1a1a;
+      background-color: #fdfdfd;
+    }
+    body {
+      margin: 0 auto;
+      max-width: 36em;
+      padding-left: 50px;
+      padding-right: 50px;
+      padding-top: 50px;
+      padding-bottom: 50px;
+      hyphens: auto;
+      overflow-wrap: break-word;
+      text-rendering: optimizeLegibility;
+      font-kerning: normal;
+    }
+    @media (max-width: 600px) {
+      body {
+        font-size: 0.9em;
+        padding: 12px;
+      }
+      h1 {
+        font-size: 1.8em;
+      }
+    }
+    @media print {
+      html {
+        background-color: white;
+      }
+      body {
+        background-color: transparent;
+        color: black;
+        font-size: 12pt;
+      }
+      p, h2, h3 {
+        orphans: 3;
+        widows: 3;
+      }
+      h2, h3, h4 {
+        page-break-after: avoid;
+      }
+    }
+    p {
+      margin: 1em 0;
+    }
+    a {
+      color: #1a1a1a;
+    }
+    a:visited {
+      color: #1a1a1a;
+    }
+    img {
+      max-width: 100%;
+    }
+    h1, h2, h3, h4, h5, h6 {
+      margin-top: 1.4em;
+    }
+    h5, h6 {
+      font-size: 1em;
+      font-style: italic;
+    }
+    h6 {
+      font-weight: normal;
+    }
+    ol, ul {
+      padding-left: 1.7em;
+      margin-top: 1em;
+    }
+    li > ol, li > ul {
+      margin-top: 0;
+    }
+    blockquote {
+      margin: 1em 0 1em 1.7em;
+      padding-left: 1em;
+      border-left: 2px solid #e6e6e6;
+      color: #606060;
+    }
+    code {
+      font-family: Menlo, Monaco, Consolas, 'Lucida Console', monospace;
+      font-size: 85%;
+      margin: 0;
+      hyphens: manual;
+    }
+    pre {
+      margin: 1em 0;
+      overflow: auto;
+    }
+    pre code {
+      padding: 0;
+      overflow: visible;
+      overflow-wrap: normal;
+    }
+    .sourceCode {
+     background-color: transparent;
+     overflow: visible;
+    }
+    hr {
+      background-color: #1a1a1a;
+      border: none;
+      height: 1px;
+      margin: 1em 0;
+    }
+    table {
+      margin: 1em 0;
+      border-collapse: collapse;
+      width: 100%;
+      overflow-x: auto;
+      display: block;
+      font-variant-numeric: lining-nums tabular-nums;
+    }
+    table caption {
+      margin-bottom: 0.75em;
+    }
+    tbody {
+      margin-top: 0.5em;
+      border-top: 1px solid #1a1a1a;
+      border-bottom: 1px solid #1a1a1a;
+    }
+    th {
+      border-top: 1px solid #1a1a1a;
+      padding: 0.25em 0.5em 0.25em 0.5em;
+    }
+    td {
+      padding: 0.125em 0.5em 0.25em 0.5em;
+    }
+    header {
+      margin-bottom: 4em;
+      text-align: center;
+    }
+    #TOC li {
+      list-style: none;
+    }
+    #TOC ul {
+      padding-left: 1.3em;
+    }
+    #TOC > ul {
+      padding-left: 0;
+    }
+    #TOC a:not(:hover) {
+      text-decoration: none;
+    }
     code{white-space: pre-wrap;}
     span.smallcaps{font-variant: small-caps;}
-    span.underline{text-decoration: underline;}
-    div.column{display: inline-block; vertical-align: top; width: 50%;}
+    div.columns{display: flex; gap: min(4vw, 1.5em);}
+    div.column{flex: auto; overflow-x: auto;}
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
-    ul.task-list{list-style: none;}
+    /* The extra [class] is a hack that increases specificity enough to
+       override a similar rule in reveal.js */
+    ul.task-list[class]{list-style: none;}
+    ul.task-list li input[type="checkbox"] {
+      font-size: inherit;
+      width: 0.8em;
+      margin: 0 0.8em 0.2em -1.6em;
+      vertical-align: middle;
+    }
+    .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
 </head>
 <body>
@@ -23,7 +173,9 @@
 </colgroup>
 <thead>
 <tr class="header">
-<th><strong>29 <a href="https://en.wikipedia.org/wiki/Dheerasankarabharanam" title="Dheerasankarabharanam">Dhīraśankarābharaṇam</a></strong></th>
+<th><strong>29 <a
+href="https://en.wikipedia.org/wiki/Dheerasankarabharanam"
+title="Dheerasankarabharanam">Dhīraśankarābharaṇam</a></strong></th>
 <th>S R₂ G₃ M₁ P D₂ N₃ Ṡ</th>
 <th>Ṡ N₃ D₂ P M₁ G₃ R₂ S</th>
 </tr>
@@ -35,12 +187,14 @@
 <td>Ṡ N₃ D₂ P G₃ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Arabhi" title="Arabhi">Ārabhi</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Arabhi"
+title="Arabhi">Ārabhi</a></em></td>
 <td>S R₂ M₁ P D₂ S<br>S R₂ M₁ P D₂ Ṡ</td>
 <td>Ṡ N₃ D₂ P M₁ G₃ R₂ S<br>S D₂ P M₁ G₃ R₂ S</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Atana" title="Atana">Atāna</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Atana"
+title="Atana">Atāna</a></em></td>
 <td>S R₂ M₁ P N₂ Ṡ</td>
 <td>Ṡ N₂ D₂ P M₁ G₂ M₁ R₂ S (<em>Anya swara*</em> : G₂ N₂)</td>
 </tr>
@@ -65,12 +219,14 @@
 <td>Ṡ N₃ D₂ P M₂ M₁ G₃ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Bihag" title="Bihag">Bihag</a></em> {Original/Hindustani}</td>
+<td><em><a href="https://en.wikipedia.org/wiki/Bihag"
+title="Bihag">Bihag</a></em> {Original/Hindustani}</td>
 <td>N₃ S G₃ M₁ P N₃ Ṡ</td>
 <td>Ṡ N₃ D₂ P M₂ P G₃ M₁ G₃ R₂ S (<em>Anya swara*</em> : M₂)</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Bilahari" title="Bilahari">Bilahari</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Bilahari"
+title="Bilahari">Bilahari</a></em></td>
 <td>S R₂ G₃ P D₂ Ṡ</td>
 <td>Ṡ N₃ D₂ P M₁ G₃ R₂ S (<em>Anya swara*</em> : N₂)</td>
 </tr>
@@ -95,7 +251,9 @@
 <td>Ṡ N₃ D₂ P M₁ G₃ R₁ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Devagandhari#In_Carnatic_music" title="Devagandhari">Devagāndhāri</a></em></td>
+<td><em><a
+href="https://en.wikipedia.org/wiki/Devagandhari#In_Carnatic_music"
+title="Devagandhari">Devagāndhāri</a></em></td>
 <td>S R₂ M₁ P D₂ Ṡ</td>
 <td>Ṡ N₃ D₂ P M₁ G₃ R₂ S (<em>Anya swara*</em> : N₂)</td>
 </tr>
@@ -110,7 +268,8 @@
 <td>Ṡ N₃ D₂ P M₁ G₃ R₂ S</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Durga_(raga)" title="Durga (raga)">Durga</a> {Hindustani}</em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Durga_(raga)"
+title="Durga (raga)">Durga</a> {Hindustani}</em></td>
 <td>S R₂ M₁ D₂ P D₂ Ṡ</td>
 <td>Ṡ D₂ P M₁ R₂ S</td>
 </tr>
@@ -120,7 +279,8 @@
 <td>Ṡ N₃ D₂ P M₁ P M₁ G₃ R₂ S</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Garudadhvani" title="Garudadhvani">Garudadhvani</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Garudadhvani"
+title="Garudadhvani">Garudadhvani</a></em></td>
 <td>S R₂ G₃ M₁ P D₂ N₃ Ṡ</td>
 <td>Ṡ D₂ P G₃ R₂ S</td>
 </tr>
@@ -130,7 +290,8 @@
 <td>Ṡ N₃ M₁ G₃ R₂ S</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Hamsadhwani" title="Hamsadhwani">Hamsadhwani</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Hamsadhwani"
+title="Hamsadhwani">Hamsadhwani</a></em></td>
 <td>S R₂ G₃ P N₃ Ṡ</td>
 <td>Ṡ N₃ P G₃ R₂ S</td>
 </tr>
@@ -145,7 +306,8 @@
 <td>Ṡ N₃ D₂ P M₁ G₃ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Jana_Ranjani" title="Jana Ranjani">Jana Ranjani</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Jana_Ranjani"
+title="Jana Ranjani">Jana Ranjani</a></em></td>
 <td>S R₂ G₃ M₁ P D₂ P N₃ Ṡ</td>
 <td>Ṡ D₂ P M₁ R₂ S</td>
 </tr>
@@ -165,7 +327,8 @@
 <td>Ṡ N₃ S D₂ P M₁ G₃ M₁ G₃ M₁ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Kathanakuthuhalam" title="Kathanakuthuhalam">Kathanakuthuhalam</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Kathanakuthuhalam"
+title="Kathanakuthuhalam">Kathanakuthuhalam</a></em></td>
 <td>S R₂ M₁ D₂ N₃ G₃ P Ṡ</td>
 <td>Ṡ N₃ D₂ P M₁ G₃ R₂ S</td>
 </tr>
@@ -175,7 +338,8 @@
 <td>Ṡ N₃ D₂ M₁ G₃ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Kedaram" title="Kedaram">Kedaram</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Kedaram"
+title="Kedaram">Kedaram</a></em></td>
 <td>S M₁ G₃ M₁ P N₃ Ṡ</td>
 <td>Ṡ N₃ P M₁ G₃ R₂ S</td>
 </tr>
@@ -250,17 +414,20 @@
 <td>Ṡ N₃ P M₁ G₃ R₂ G₃ S (<em>Anya swara*</em> : N₂)</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Niroshta" title="Niroshta">Niroshta</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Niroshta"
+title="Niroshta">Niroshta</a></em></td>
 <td>S R₂ G₃ D₂ N₃ Ṡ</td>
 <td>Ṡ N₃ D₂ G₃ R₂ S</td>
 </tr>
 <tr class="even">
 <td><em>Pahādi {Hindustani}</em></td>
 <td>S R₂ G₃ P D₂ P D₂ S</td>
-<td>N₃ D₂ P G₃ M₁ G₃ R₂ S N₃ D₂ P D₂ S (<em>Anya swara*</em> : R₁ G₂ M₂ D₁ N₂)</td>
+<td>N₃ D₂ P G₃ M₁ G₃ R₂ S N₃ D₂ P D₂ S (<em>Anya swara*</em> : R₁ G₂ M₂
+D₁ N₂)</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Poornachandrika" title="Poornachandrika">Poornachandrika</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Poornachandrika"
+title="Poornachandrika">Poornachandrika</a></em></td>
 <td>S R₂ G₃ M₁ P D₂ P Ṡ</td>
 <td>Ṡ N₃ P M₁ R₂ G₃ M₁ R₂ S</td>
 </tr>
@@ -295,7 +462,8 @@
 <td>Ṡ N₃ D₂ P G₃ P R₂ G₃ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Shankara_(raga)" title="Shankara (raga)">Shankara</a></em> {Hindustani}</td>
+<td><em><a href="https://en.wikipedia.org/wiki/Shankara_(raga)"
+title="Shankara (raga)">Shankara</a></em> {Hindustani}</td>
 <td>S G₃ P N₃ D₂ Ṡ N₃ Ṡ</td>
 <td>Ṡ N₃ D₂ P G₃ P G₃ R₂ S</td>
 </tr>
@@ -335,7 +503,8 @@
 <td>Ṡ D₂ P M₁ R₂ G₃ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Shuddha_Saveri" title="Shuddha Saveri">Suddha Sāveri</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Shuddha_Saveri"
+title="Shuddha Saveri">Suddha Sāveri</a></em></td>
 <td>S R₂ M₁ P D₂ Ṡ</td>
 <td>Ṡ D₂ P M₁ R₂ S</td>
 </tr>
