--- a/ragas/html/22_Kharaharapriyā.html
+++ b/ragas/html/22_Kharaharapriyā.html
@@ -6,12 +6,162 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <title>22_Kharaharapriyā</title>
   <style>
+    html {
+      color: #1a1a1a;
+      background-color: #fdfdfd;
+    }
+    body {
+      margin: 0 auto;
+      max-width: 36em;
+      padding-left: 50px;
+      padding-right: 50px;
+      padding-top: 50px;
+      padding-bottom: 50px;
+      hyphens: auto;
+      overflow-wrap: break-word;
+      text-rendering: optimizeLegibility;
+      font-kerning: normal;
+    }
+    @media (max-width: 600px) {
+      body {
+        font-size: 0.9em;
+        padding: 12px;
+      }
+      h1 {
+        font-size: 1.8em;
+      }
+    }
+    @media print {
+      html {
+        background-color: white;
+      }
+      body {
+        background-color: transparent;
+        color: black;
+        font-size: 12pt;
+      }
+      p, h2, h3 {
+        orphans: 3;
+        widows: 3;
+      }
+      h2, h3, h4 {
+        page-break-after: avoid;
+      }
+    }
+    p {
+      margin: 1em 0;
+    }
+    a {
+      color: #1a1a1a;
+    }
+    a:visited {
+      color: #1a1a1a;
+    }
+    img {
+      max-width: 100%;
+    }
+    h1, h2, h3, h4, h5, h6 {
+      margin-top: 1.4em;
+    }
+    h5, h6 {
+      font-size: 1em;
+      font-style: italic;
+    }
+    h6 {
+      font-weight: normal;
+    }
+    ol, ul {
+      padding-left: 1.7em;
+      margin-top: 1em;
+    }
+    li > ol, li > ul {
+      margin-top: 0;
+    }
+    blockquote {
+      margin: 1em 0 1em 1.7em;
+      padding-left: 1em;
+      border-left: 2px solid #e6e6e6;
+      color: #606060;
+    }
+    code {
+      font-family: Menlo, Monaco, Consolas, 'Lucida Console', monospace;
+      font-size: 85%;
+      margin: 0;
+      hyphens: manual;
+    }
+    pre {
+      margin: 1em 0;
+      overflow: auto;
+    }
+    pre code {
+      padding: 0;
+      overflow: visible;
+      overflow-wrap: normal;
+    }
+    .sourceCode {
+     background-color: transparent;
+     overflow: visible;
+    }
+    hr {
+      background-color: #1a1a1a;
+      border: none;
+      height: 1px;
+      margin: 1em 0;
+    }
+    table {
+      margin: 1em 0;
+      border-collapse: collapse;
+      width: 100%;
+      overflow-x: auto;
+      display: block;
+      font-variant-numeric: lining-nums tabular-nums;
+    }
+    table caption {
+      margin-bottom: 0.75em;
+    }
+    tbody {
+      margin-top: 0.5em;
+      border-top: 1px solid #1a1a1a;
+      border-bottom: 1px solid #1a1a1a;
+    }
+    th {
+      border-top: 1px solid #1a1a1a;
+      padding: 0.25em 0.5em 0.25em 0.5em;
+    }
+    td {
+      padding: 0.125em 0.5em 0.25em 0.5em;
+    }
+    header {
+      margin-bottom: 4em;
+      text-align: center;
+    }
+    #TOC li {
+      list-style: none;
+    }
+    #TOC ul {
+      padding-left: 1.3em;
+    }
+    #TOC > ul {
+      padding-left: 0;
+    }
+    #TOC a:not(:hover) {
+      text-decoration: none;
+    }
     code{white-space: pre-wrap;}
     span.smallcaps{font-variant: small-caps;}
-    span.underline{text-decoration: underline;}
-    div.column{display: inline-block; vertical-align: top; width: 50%;}
+    div.columns{display: flex; gap: min(4vw, 1.5em);}
+    div.column{flex: auto; overflow-x: auto;}
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
-    ul.task-list{list-style: none;}
+    /* The extra [class] is a hack that increases specificity enough to
+       override a similar rule in reveal.js */
+    ul.task-list[class]{list-style: none;}
+    ul.task-list li input[type="checkbox"] {
+      font-size: inherit;
+      width: 0.8em;
+      margin: 0 0.8em 0.2em -1.6em;
+      vertical-align: middle;
+    }
+    .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
 </head>
 <body>
@@ -23,29 +173,34 @@
 </colgroup>
 <thead>
 <tr class="header">
-<th><strong>22 <a href="https://en.wikipedia.org/wiki/Kharaharapriya" title="Kharaharapriya">Kharaharapriyā</a></strong></th>
+<th><strong>22 <a href="https://en.wikipedia.org/wiki/Kharaharapriya"
+title="Kharaharapriya">Kharaharapriyā</a></strong></th>
 <th>S R₂ G₂ M₁ P D₂ N₂ Ṡ</th>
 <th>Ṡ N₂ D₂ P M₁ G₂ R₂ S</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td><strong><a href="https://en.wikipedia.org/wiki/Sri_Ragam" title="Sri Ragam">Shree</a></strong></td>
+<td><strong><a href="https://en.wikipedia.org/wiki/Sri_Ragam"
+title="Sri Ragam">Shree</a></strong></td>
 <td>S R₂ M₁ P N₂ Ṡ</td>
 <td>Ṡ N₂ P D₂ N₂ P M₁ R₂ G₂ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Andolika" title="Andolika">Andolikā</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Andolika"
+title="Andolika">Andolikā</a></em></td>
 <td>S R₂ M₁ P N₂ Ṡ</td>
 <td>Ṡ N₂ D₂ M₁ R₂ S</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Abheri" title="Abheri">Abheri</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Abheri"
+title="Abheri">Abheri</a></em></td>
 <td>S G₂ M₁ P N₂ Ṡ</td>
 <td>Ṡ N₂ D₂ P M₁ G₂ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Abhogi" title="Abhogi">Abhogi</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Abhogi"
+title="Abhogi">Abhogi</a></em></td>
 <td>S R₂ G₂ M₁ D₂ Ṡ</td>
 <td>Ṡ D₂ M₁ G₂ R₂ S</td>
 </tr>
@@ -75,7 +230,8 @@
 <td>R₂ S N₂ D₂ P M₁ G₂ M₁ G₂ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Bageshri" title="Bageshri">Bageshri</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Bageshri"
+title="Bageshri">Bageshri</a></em></td>
 <td>S G₂ M₁ D₂ N₂ Ṡ</td>
 <td>Ṡ N₂ D₂ M₁ P D₂ G₂ M₁ R₂ S</td>
 </tr>
@@ -90,17 +246,20 @@
 <td>Ṡ N₂ D₂ P M₁ R₂ S</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Bhimpalasi" title="Bhimpalasi">Bhimpalasi</a> {Hindustani}</em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Bhimpalasi"
+title="Bhimpalasi">Bhimpalasi</a> {Hindustani}</em></td>
 <td>N₂ S G₂ M₁ P N₂ Ṡ</td>
 <td>Ṡ N₂ D₂ P M₁ G₂ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Brindavani_Sarang" title="Brindavani Sarang">Brindāvana Sāranga</a> {Hindustani}</em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Brindavani_Sarang"
+title="Brindavani Sarang">Brindāvana Sāranga</a> {Hindustani}</em></td>
 <td>S R₂ M₁ P N₃ Ṡ</td>
 <td>Ṡ N₂ P M₁ R₂ G₂ R₂ S (<em>Anya swara*</em> : N₃)</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Brindavani_Sarang" title="Brindavani Sarang">Brindāvani</a> {Hindustani}</em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Brindavani_Sarang"
+title="Brindavani Sarang">Brindāvani</a> {Hindustani}</em></td>
 <td>S R₂ M₁ P N₃ Ṡ</td>
 <td>Ṡ N₂ P M₁ R₂ S (<em>Anya swara*</em> : N₃)</td>
 </tr>
@@ -115,7 +274,8 @@
 <td>N₂ D₂ P M₁ G₂ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Darbar_(Raga)" title="Darbar (Raga)">Darbar</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Darbar_(Raga)"
+title="Darbar (Raga)">Darbar</a></em></td>
 <td>S R₂ M₁ P D₂ N₂ S</td>
 <td>R₂ S N₂ S D₂ P M₁ R₂ G₂ G₂ R₂ S</td>
 </tr>
@@ -150,9 +310,11 @@
 <td>Ṡ N₂ P M₁ G₂ S</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Gara_(raga)" title="Gara (raga)">Gāra</a> {Hindustani}</em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Gara_(raga)"
+title="Gara (raga)">Gāra</a> {Hindustani}</em></td>
 <td>S G₂ M₁ P D₂ N₃ Ṡ</td>
-<td>Ṡ N₂ D₂ P M₁ G₃ R₂ G₂ R₂ S N₃ S N₂ D₂ S (<em>Anya swara*</em> : G₃ D₁ N₃)</td>
+<td>Ṡ N₂ D₂ P M₁ G₃ R₂ G₂ R₂ S N₃ S N₂ D₂ S (<em>Anya swara*</em> : G₃
+D₁ N₃)</td>
 </tr>
 <tr class="even">
 <td><em>Hamsa ābheri</em></td>
@@ -172,12 +334,14 @@
 <tr class="odd">
 <td><em>Hindustāni Kāpi</em></td>
 <td>S R₂ M₁ P N₂ Ṡ</td>
-<td>Ṡ N₂ D₂ N₂ P M₁ G₂ M₁ D₂ P G₂ R₂ S N₂ S (<em>Anya swara*</em> : G₃ D₁ N₃)</td>
+<td>Ṡ N₂ D₂ N₂ P M₁ G₂ M₁ D₂ P G₂ R₂ S N₂ S (<em>Anya swara*</em> : G₃
+D₁ N₃)</td>
 </tr>
 <tr class="even">
 <td><em>Huseni</em></td>
 <td>S R₂ G₂ M₁ P N₂ D₂ N₂ S<br>S R₂ G₃ M₁ P N₃ D₂ M₁ P N₃ Ṡ</td>
-<td>Ṡ N₂ D₁ P M₁ G₂ R₂ S (<em>Anya swara*</em> : D₁)<br>S N₃ S P D₂ M₁ P G₃ R₂ S</td>
+<td>Ṡ N₂ D₁ P M₁ G₂ R₂ S (<em>Anya swara*</em> : D₁)<br>S N₃ S P D₂ M₁ P
+G₃ R₂ S</td>
 </tr>
 <tr class="odd">
 <td>Jatādhāri</td>
@@ -200,7 +364,8 @@
 <td>Ṡ N₂ D₂ P M₁ G₂ S</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Jog_(raga)" title="Jog (raga)">Jog</a> {Hindustani}</em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Jog_(raga)"
+title="Jog (raga)">Jog</a> {Hindustani}</em></td>
 <td>S G₃ M₁ P N₂ Ṡ</td>
 <td>Ṡ N₂ P M₁ G₃ M₁ G₂ S (<em>Anya swara*</em> : G₂)</td>
 </tr>
@@ -210,7 +375,8 @@
 <td>Ṡ N₂ P M₁ G₂ M₁ R₂ S</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/K%C4%81pi" title="Kāpi">Kāpi</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/K%C4%81pi"
+title="Kāpi">Kāpi</a></em></td>
 <td>S R₂ M₁ P N₃ Ṡ</td>
 <td>Ṡ N₂ D₂ N₂ P M₁ G₂ R₂ S (<em>Anya swara*</em> : G₃ D₁ N₃)</td>
 </tr>
@@ -290,7 +456,8 @@
 <td>Ṡ N₂ D₂ P G₂ R₂ S</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Madhyamavathi" title="Madhyamavathi">Madhyamāvathi</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Madhyamavathi"
+title="Madhyamavathi">Madhyamāvathi</a></em></td>
 <td>S R₂ M₁ P N₂ Ṡ</td>
 <td>Ṡ N₂ P M₁ R₂ S</td>
 </tr>
@@ -345,12 +512,14 @@
 <td>Ṡ D₂ P G₂ R₂ S (<em>Anya swara*</em> : R₁ G₃ M₁ M₂ D₁ N₂ N₃)</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Malhar" title="Malhar">Malhar</a> or Miyān ki Malhār {Hindustani}</em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Malhar"
+title="Malhar">Malhar</a> or Miyān ki Malhār {Hindustani}</em></td>
 <td>S R₂ P M₁ P N₂ D₂ N₃ Ṡ</td>
 <td>Ṡ N₂ P M₁ P G₂ M₁ R₂ S (<em>Anya swara*</em> : N₃)</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Mukhari" title="Mukhari">Mukhāri</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Mukhari"
+title="Mukhari">Mukhāri</a></em></td>
 <td>S R₂ M₁ P N₂ D₂ Ṡ</td>
 <td>Ṡ N₂ D₁ P M₁ G₂ R₂ S (<em>Anya swara*</em> : D₁)</td>
 </tr>
@@ -415,9 +584,11 @@
 <td>Ṡ N₂ D₂ P M₁ G₂ M₁ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Pilu_(raga)" title="Pilu (raga)">Pilu</a>(peelu) {Hindustani}</em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Pilu_(raga)"
+title="Pilu (raga)">Pilu</a>(peelu) {Hindustani}</em></td>
 <td>N₃ S G₃ M₁ P N₃ Ṡ</td>
-<td>Ṡ N₂ D₂ P D₁ P M₁ G₂ R₂ S N₃ S (<em>Anya swara*</em> : G₃ D₁ N₃)</td>
+<td>Ṡ N₂ D₂ P D₁ P M₁ G₂ R₂ S N₃ S (<em>Anya swara*</em> : G₃ D₁
+N₃)</td>
 </tr>
 <tr class="odd">
 <td><em>Poornakalānidhi</em></td>
@@ -435,7 +606,8 @@
 <td>Ṡ N₂ P G₂ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Reethigowla" title="Reethigowla">Reethigowla</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Reethigowla"
+title="Reethigowla">Reethigowla</a></em></td>
 <td>S G₂ R₂ G₂ M₁ N₂ D₂ M₁ N₂ N₂ Ṡ</td>
 <td>Ṡ N₂ D₂ M₁ G₂ M₁ P M₁ G₂ R₂ S</td>
 </tr>
@@ -445,12 +617,14 @@
 <td>Ṡ N₂ P M₁ G₂ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Sahana_(raga)" title="Sahana (raga)">Sahāna</a> (Original)</em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Sahana_(raga)"
+title="Sahana (raga)">Sahāna</a> (Original)</em></td>
 <td>S R₂ G₂ M₁ P M₁ D₂ N₂ Ṡ</td>
 <td>Ṡ N₂ D₂ P M₁ G₂ G₂ R₂ G₂ R₂ S (<em>Anya swara*</em> : G₃)</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Salaga_Bhairavi" title="Salaga Bhairavi">Sālagabhairavi</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Salaga_Bhairavi"
+title="Salaga Bhairavi">Sālagabhairavi</a></em></td>
 <td>S R₂ M₁ P D₂ Ṡ</td>
 <td>Ṡ N₂ D₂ P M₁ G₂ R₂ S</td>
 </tr>
@@ -485,7 +659,8 @@
 <td>Ṡ D₂ P G₂ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Shivaranjani" title="Shivaranjani">Shivaranjani</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Shivaranjani"
+title="Shivaranjani">Shivaranjani</a></em></td>
 <td>S R₂ G₂ P D₂ Ṡ</td>
 <td>Ṡ D₂ P G₂ R₂ S</td>
 </tr>
@@ -500,7 +675,8 @@
 <td>Ṡ N₂ D₂ M₁ G₂ R₂ S</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Shreeranjani" title="Shreeranjani">Shreeranjani</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Shreeranjani"
+title="Shreeranjani">Shreeranjani</a></em></td>
 <td>S R₂ G₂ M₁ D₂ N₂ Ṡ</td>
 <td>Ṡ N₂ D₂ M₁ G₂ R₂ S</td>
 </tr>
@@ -520,7 +696,8 @@
 <td>Ṡ N₂ D₂ M₁ G₂ R₂ S</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Shuddha_Dhanyasi" title="Shuddha Dhanyasi">Suddha Dhanyāsi</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Shuddha_Dhanyasi"
+title="Shuddha Dhanyasi">Suddha Dhanyāsi</a></em></td>
 <td>S G₂ M₁ P N₂ Ṡ</td>
 <td>Ṡ N₂ P M₁ G₂ S</td>
 </tr>
