--- a/ragas/html/65_Mechakalyāni.html
+++ b/ragas/html/65_Mechakalyāni.html
@@ -6,12 +6,162 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <title>65_Mechakalyāni</title>
   <style>
+    html {
+      color: #1a1a1a;
+      background-color: #fdfdfd;
+    }
+    body {
+      margin: 0 auto;
+      max-width: 36em;
+      padding-left: 50px;
+      padding-right: 50px;
+      padding-top: 50px;
+      padding-bottom: 50px;
+      hyphens: auto;
+      overflow-wrap: break-word;
+      text-rendering: optimizeLegibility;
+      font-kerning: normal;
+    }
+    @media (max-width: 600px) {
+      body {
+        font-size: 0.9em;
+        padding: 12px;
+      }
+      h1 {
+        font-size: 1.8em;
+      }
+    }
+    @media print {
+      html {
+        background-color: white;
+      }
+      body {
+        background-color: transparent;
+        color: black;
+        font-size: 12pt;
+      }
+      p, h2, h3 {
+        orphans: 3;
+        widows: 3;
+      }
+      h2, h3, h4 {
+        page-break-after: avoid;
+      }
+    }
+    p {
+      margin: 1em 0;
+    }
+    a {
+      color: #1a1a1a;
+    }
+    a:visited {
+      color: #1a1a1a;
+    }
+    img {
+      max-width: 100%;
+    }
+    h1, h2, h3, h4, h5, h6 {
+      margin-top: 1.4em;
+    }
+    h5, h6 {
+      font-size: 1em;
+      font-style: italic;
+    }
+    h6 {
+      font-weight: normal;
+    }
+    ol, ul {
+      padding-left: 1.7em;
+      margin-top: 1em;
+    }
+    li > ol, li > ul {
+      margin-top: 0;
+    }
+    blockquote {
+      margin: 1em 0 1em 1.7em;
+      padding-left: 1em;
+      border-left: 2px solid #e6e6e6;
+      color: #606060;
+    }
+    code {
+      font-family: Menlo, Monaco, Consolas, 'Lucida Console', monospace;
+      font-size: 85%;
+      margin: 0;
+      hyphens: manual;
+    }
+    pre {
+      margin: 1em 0;
+      overflow: auto;
+    }
+    pre code {
+      padding: 0;
+      overflow: visible;
+      overflow-wrap: normal;
+    }
+    .sourceCode {
+     background-color: transparent;
+     overflow: visible;
+    }
+    hr {
+      background-color: #1a1a1a;
+      border: none;
+      height: 1px;
+      margin: 1em 0;
+    }
+    table {
+      margin: 1em 0;
+      border-collapse: collapse;
+      width: 100%;
+      overflow-x: auto;
+      display: block;
+      font-variant-numeric: lining-nums tabular-nums;
+    }
+    table caption {
+      margin-bottom: 0.75em;
+    }
+    tbody {
+      margin-top: 0.5em;
+      border-top: 1px solid #1a1a1a;
+      border-bottom: 1px solid #1a1a1a;
+    }
+    th {
+      border-top: 1px solid #1a1a1a;
+      padding: 0.25em 0.5em 0.25em 0.5em;
+    }
+    td {
+      padding: 0.125em 0.5em 0.25em 0.5em;
+    }
+    header {
+      margin-bottom: 4em;
+      text-align: center;
+    }
+    #TOC li {
+      list-style: none;
+    }
+    #TOC ul {
+      padding-left: 1.3em;
+    }
+    #TOC > ul {
+      padding-left: 0;
+    }
+    #TOC a:not(:hover) {
+      text-decoration: none;
+    }
     code{white-space: pre-wrap;}
     span.smallcaps{font-variant: small-caps;}
-    span.underline{text-decoration: underline;}
-    div.column{display: inline-block; vertical-align: top; width: 50%;}
+    div.columns{display: flex; gap: min(4vw, 1.5em);}
+    div.column{flex: auto; overflow-x: auto;}
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
-    ul.task-list{list-style: none;}
+    /* The extra [class] is a hack that increases specificity enough to
+       override a similar rule in reveal.js */
+    ul.task-list[class]{list-style: none;}
+    ul.task-list li input[type="checkbox"] {
+      font-size: inherit;
+      width: 0.8em;
+      margin: 0 0.8em 0.2em -1.6em;
+      vertical-align: middle;
+    }
+    .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
 </head>
 <body>
@@ -23,7 +173,9 @@
 </colgroup>
 <thead>
 <tr class="header">
-<th><strong>65 <a href="https://en.wikipedia.org/wiki/Kalyani_(r%C4%81ga)" title="Kalyani (rāga)">Mechakalyāni</a></strong></th>
+<th><strong>65 <a
+href="https://en.wikipedia.org/wiki/Kalyani_(r%C4%81ga)"
+title="Kalyani (rāga)">Mechakalyāni</a></strong></th>
 <th>S R₂ G₃ M₂ P D₂ N₃ Ṡ</th>
 <th>Ṡ N₃ D₂ P M₂ G₃ R₂ S</th>
 </tr>
@@ -35,7 +187,10 @@
 <td>Ṡ N₃ D₂ P M₂ G₃ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Amritha_Kalyani" title="Amritha Kalyani">Amritha Kalyani</a> (Raga created by Mahesh Mahadev)<sup><a href="https://en.wikipedia.org/wiki/List_of_Janya_ragas#cite_note-:0-4">[4]</a></sup></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Amritha_Kalyani"
+title="Amritha Kalyani">Amritha Kalyani</a> (Raga created by Mahesh
+Mahadev)<sup><a
+href="https://en.wikipedia.org/wiki/List_of_Janya_ragas#cite_note-:0-4">[4]</a></sup></em></td>
 <td>S G₃ M₂ P N₃ Ṡ</td>
 <td>Ṡ N₃ D₂ P M₂ G₃ R₂ S</td>
 </tr>
@@ -55,7 +210,8 @@
 <td>Ṡ N₃ D₂ P M₂ G₃ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Bhoopali" title="Bhoopali">Bhoopāli</a> {Hindustani}</em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Bhoopali"
+title="Bhoopali">Bhoopāli</a> {Hindustani}</em></td>
 <td>S R₂ G₃ P D₂ Ṡ</td>
 <td>Ṡ D₂ P G₃ R₂ S</td>
 </tr>
@@ -65,14 +221,17 @@
 <td>Ṡ N₃ D₂ N₃ P M₂ G₃ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Hameer" title="Hameer">Hameer</a> {Hindustani}</em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Hameer"
+title="Hameer">Hameer</a> {Hindustani}</em></td>
 <td>S R₂ S G₃ M₁ D₂ N₃ D₂ Ṡ</td>
-<td>Ṡ N₃ D₂ N₃ P G₃ M₁ D₂ M₂ P D₂ P G₃ M₁ R₂ S (<em>Anya swara*</em> : M₁)</td>
+<td>Ṡ N₃ D₂ N₃ P G₃ M₁ D₂ M₂ P D₂ P G₃ M₁ R₂ S (<em>Anya swara*</em> :
+M₁)</td>
 </tr>
 <tr class="odd">
 <td><em>Hameer Kalyāni {carnatic interpretation of Kedar}</em></td>
 <td>S P M₂ P D₂ N₃ Ṡ<br>S R₂ S P M₂ P D₂ N₃ Ṡ<br>S R₂ S P M₂ N₃ D₂ S N₃ Ṡ<br>S R₂ G₃ M₂ P D₂ N₃ P D₂ P Ṡ<br>S P M₂ P D₂ N₃ Ṡ</td>
-<td>Ṡ N₃ D₂ P M₂ M₁ G₃ P M₁ R₂ Ṡ<br>S N₃ D₂ P M₂ G₃ M₁ G₃ R₂ Ṡ<br>S N₃ D₂ P M₂ G M₁ R₂ S<br>S N₃ D₂ P G₃ M₁ G₃ R₂ Ṡ<br>S N₃ D₂ P G₃ M₁ G₃ R₂ S (<em>Anya swara*</em> : M₁ N₂)</td>
+<td>Ṡ N₃ D₂ P M₂ M₁ G₃ P M₁ R₂ Ṡ<br>S N₃ D₂ P M₂ G₃ M₁ G₃ R₂ Ṡ<br>S N₃ D₂ P M₂ G M₁ R₂ S<br>S N₃ D₂ P G₃ M₁ G₃ R₂ Ṡ<br>S N₃ D₂ P G₃ M₁ G₃ R₂ S
+(<em>Anya swara*</em> : M₁ N₂)</td>
 </tr>
 <tr class="even">
 <td><em>Hamsakalyāni</em></td>
@@ -90,7 +249,8 @@
 <td>Ṡ N₃ D₂ P M₂ G₃ S</td>
 </tr>
 <tr class="odd">
-<td><em><a href="https://en.wikipedia.org/wiki/Kedar_(raga)" title="Kedar (raga)">Ked_ār_</a> {Hindustani}</em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Kedar_(raga)"
+title="Kedar (raga)">Ked_ār_</a> {Hindustani}</em></td>
 <td>S *M₁(G₃)P D₂ N₃ Ṡ</td>
 <td>Ṡ N₃ D₂ P M₂ P *M₁ S R₂ S (<em>Anya swara*</em> : M₁)</td>
 </tr>
@@ -105,7 +265,8 @@
 <td>Ṡ N₃ P M₂ G₃ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Mohanakalyani" title="Mohanakalyani">Mohana Kalyāni</a></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Mohanakalyani"
+title="Mohanakalyani">Mohana Kalyāni</a></em></td>
 <td>S R₂ G₃ P D₂ Ṡ</td>
 <td>Ṡ N₃ D₂ P M₂ G₃ R₂ S</td>
 </tr>
@@ -115,7 +276,10 @@
 <td>Ṡ N₃ D₂ M₂ D₂ G₃ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Nada_Kalyani" title="Nada Kalyani">Nada Kalyani</a> (Raga created by Mahesh Mahadev)<sup><a href="https://en.wikipedia.org/wiki/List_of_Janya_ragas#cite_note-:0-4">[4]</a></sup></em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Nada_Kalyani"
+title="Nada Kalyani">Nada Kalyani</a> (Raga created by Mahesh
+Mahadev)<sup><a
+href="https://en.wikipedia.org/wiki/List_of_Janya_ragas#cite_note-:0-4">[4]</a></sup></em></td>
 <td>S R₂ M₂ P N₃ Ṡ</td>
 <td>Ṡ N₃ D₂ M₂ G₃ R₂ S</td>
 </tr>
@@ -130,14 +294,16 @@
 <td>Ṡ D₂ P M₂ G₃ S</td>
 </tr>
 <tr class="odd">
-<td><em>Rajasadhaka (Raga created by Mahesh Mahadev)<sup><a href="https://en.wikipedia.org/wiki/List_of_Janya_ragas#cite_note-:0-4">[4]</a></sup></em></td>
+<td><em>Rajasadhaka (Raga created by Mahesh Mahadev)<sup><a
+href="https://en.wikipedia.org/wiki/List_of_Janya_ragas#cite_note-:0-4">[4]</a></sup></em></td>
 <td>S R₂ G₃ P D₂ Ṡ</td>
 <td>Ṡ N₃ P M₂ R₂ S</td>
 </tr>
 <tr class="even">
 <td><em>Sāranga</em></td>
 <td>S R₂ G₃ M₂ P D₂ N₃ Ṡ<br>S R₂ S P M₂ P D₂ N₃ Ṡ<br>S P M₂ P D₂ N₃ Ṡ</td>
-<td>Ṡ N₃ D₂ P M₂ R₂ G₃ M₁ R₂ Ṡ<br>S N₃ S D₂ P M₂ R₂ G₃ M₁ R₂ Ṡ<br>S N₃ D₂ P M₂ R₂ G₃ M₁ R₂ S (<em>Anya swara*</em> : M₁)</td>
+<td>Ṡ N₃ D₂ P M₂ R₂ G₃ M₁ R₂ Ṡ<br>S N₃ S D₂ P M₂ R₂ G₃ M₁ R₂ Ṡ<br>S N₃ D₂ P M₂ R₂ G₃ M₁ R₂ S
+(<em>Anya swara*</em> : M₁)</td>
 </tr>
 <tr class="odd">
 <td><em>Sāranga Tārangini</em></td>
@@ -162,10 +328,14 @@
 <tr class="odd">
 <td><em>Shyām Kalyān {Hindustani}</em></td>
 <td>N₃ S R₂ M₂ P N₃ Ṡ</td>
-<td>Ṡ N₃ D₂ P M₂ P D₂ P G₃ M₁ P G₃ M₁ R₂ S N₃ S (<em>Anya swara*</em> : M₁)</td>
+<td>Ṡ N₃ D₂ P M₂ P D₂ P G₃ M₁ P G₃ M₁ R₂ S N₃ S (<em>Anya swara*</em> :
+M₁)</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Sunadavinodini" title="Sunadavinodini">Sunādavinodini</a> / <a href="https://en.wikipedia.org/wiki/Hindol" title="Hindol">Hindol</a> of Hindustani</em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Sunadavinodini"
+title="Sunadavinodini">Sunādavinodini</a> / <a
+href="https://en.wikipedia.org/wiki/Hindol" title="Hindol">Hindol</a> of
+Hindustani</em></td>
 <td>S G₃ M₂ D₂ N₃ Ṡ</td>
 <td>Ṡ N₃ D₂ M₂ G₃ S</td>
 </tr>
@@ -180,12 +350,16 @@
 <td>Ṡ D₂ P M₂ R₂ S</td>
 </tr>
 <tr class="odd">
-<td><em>Vivāhapriyā <sup><a href="https://en.wikipedia.org/wiki/List_of_Janya_ragas#cite_note-vivahapriya_Doubt-7">[7]</a></sup></em></td>
+<td><em>Vivāhapriyā <sup><a
+href="https://en.wikipedia.org/wiki/List_of_Janya_ragas#cite_note-vivahapriya_Doubt-7">[7]</a></sup></em></td>
 <td>S R₂ M₂ P D₂ N₃ Ṡ</td>
 <td>Ṡ N₃ D₂ P M₂ R₂ S</td>
 </tr>
 <tr class="even">
-<td><em><a href="https://en.wikipedia.org/wiki/Yamunakalyani" title="Yamunakalyani">Yamuna Kalyāni</a> / <a href="https://en.wikipedia.org/wiki/Yaman_Kalyan" title="Yaman Kalyan">Yaman Kalyan</a> {Hindustani}</em></td>
+<td><em><a href="https://en.wikipedia.org/wiki/Yamunakalyani"
+title="Yamunakalyani">Yamuna Kalyāni</a> / <a
+href="https://en.wikipedia.org/wiki/Yaman_Kalyan"
+title="Yaman Kalyan">Yaman Kalyan</a> {Hindustani}</em></td>
 <td>S R₂ G₃ M₂ P D₂ N₃ Ṡ</td>
 <td>Ṡ N₃ D₂ P M₂ G₃ M₁ G₃ R₂ S (<em>Anya swara*</em> : M₁)</td>
 </tr>
